# cmake-ios

./: .gitignore  CMakeLists.txt  Info.plist  Test.podspec  build.sh  generate-native-module.sh  generate-rust-cpp-module.sh  generate-simple-cpp-module.sh  module.modulemap
.boilerplate/module/: CMakeLists.txt  boilerplate.yml  build.sh  module.modulemap  {{.ModuleName}}.podspec
.boilerplate/module/android/src/main/cpp/: cpp-adapter.cpp
.boilerplate/module/android/src/main/java/org/{{.OrganizationName}}/: {{.ModuleName}}Java.java
.boilerplate/module/cmake/: framework.cmake  variables.cmake
.boilerplate/module/cpp/: main.cpp
.boilerplate/module/cpp/include/{{.ModuleName}}/: {{.ModuleName}}.hpp
.boilerplate/module/cpp/src/: {{.ModuleName}}.cpp
.boilerplate/module/ios/: {{.ModuleName}}.swift
.boilerplate/module/rust/: Cargo.toml
.boilerplate/module/rust/src/: lib.rs
.boilerplate/rust-cpp/: .gitignore  boilerplate.yml  build.sh  module.modulemap
.boilerplate/rust-cpp/android/: build.gradle
.boilerplate/rust-cpp/cmake/: framework.cmake
.boilerplate/rust-cpp/cpp/: main.cpp
.boilerplate/rust-cpp/cpp/include/{{.ModuleName}}/: {{.ModuleName}}.hpp
.boilerplate/rust-cpp/ios/: {{.ModuleName}}.swift
.boilerplate/simple-cpp/: .gitignore  CMakeLists.txt  build.sh
.boilerplate/simple-cpp/android/src/main/cpp/: cpp-adapter.cpp
.boilerplate/simple-cpp/android/src/main/java/org/{{.OrganizationName}}/: {{.ModuleName}}Java.java
.boilerplate/simple-cpp/cpp/include/{{.ModuleName}}/: {{.ModuleName}}.hpp
.boilerplate/simple-cpp/cpp/src/: {{.ModuleName}}.cpp
Frameworks/Test.framework/: Info.plist  Test
Test.xcframework/: Info.plist
Test.xcframework/ios-arm64-simulator/Test.framework/: Info.plist  Test
Test.xcframework/ios-arm64-simulator/Test.framework/_CodeSignature/: CodeResources
Test.xcframework/ios-arm64/Test.framework/: Test
Test.xcframework/macos-arm64/Test.framework/Versions/A/: Test
Test.xcframework/macos-arm64/Test.framework/Versions/A/Headers/: test.hpp
Test.xcframework/macos-arm64/Test.framework/Versions/A/Resources/: Info.plist
Test.xcframework/macos-arm64/Test.framework/Versions/A/_CodeSignature/: CodeResources
examples/android/: settings.gradle
examples/android/android/: build.gradle
examples/android/android/src/main/: AndroidManifest.xml
examples/android/android/src/main/cpp/: cpp-adapter.cpp
examples/android/android/src/main/java/org/app-core/: AppCoreJava.java
examples/android/app/: build.gradle
examples/android/app/src/main/java/com/example/: MainActivity.kt
examples/android/app/src/main/java/com/example/ui/theme/: Theme.kt
examples/android/gradle/wrapper/: gradle-wrapper.properties
examples/example/: Podfile
examples/example/example/: ContentView.swift  exampleApp.swift
examples/example/example.xcodeproj/: project.pbxproj
examples/example/example.xcodeproj/project.xcworkspace/xcuserdata/viktornagy.xcuserdatad/: UserInterfaceState.xcuserstate
examples/example/example.xcodeproj/xcshareddata/xcschemes/: example-ios.xcscheme  example.xcscheme
examples/example/example.xcodeproj/xcuserdata/viktornagy.xcuserdatad/xcschemes/: xcschememanagement.plist
examples/example/example.xcworkspace/xcuserdata/viktornagy.xcuserdatad/: UserInterfaceState.xcuserstate
include/: test.hpp
src/: test.c  test.cpp
