CMAKE_MINIMUM_REQUIRED(VERSION 3.29.0)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

set(LIB_VERSION 1.0.0)
set(LIB_IDENTIFIER "com.lib")

PROJECT(Test)

set(SOURCES
  src/test.cpp
)

set(HEADERS
  include/test.hpp
)

add_library(Test SHARED ${HEADERS} ${SOURCES})

target_include_directories(Test
    PUBLIC
        include
    PRIVATE
        src
)

set_target_properties(Test PROPERTIES
  FRAMEWORK TRUE
  FRAMEWORK_VERSION A
  PUBLIC_HEADER "${HEADERS}"
  VERSION "${LIB_VERSION}"
  SOVERSION "${LIB_VERSION}"
  MACOSX_FRAMEWORK_BUNDLE_VERSION "${LIB_VERSION}"
  MACOSX_FRAMEWORK_SHORT_VERSION_STRING "${LIB_VERSION}"
  MACOSX_FRAMEWORK_IDENTIFIER "${LIB_IDENTIFIER}"
  MACOSX_FRAMEWORK_INFO_PLIST ${CMAKE_CURRENT_LIST_DIR}/Info.plist
  XCODE_ATTRIBUTE_IPHONEOS_DEPLOYMENT_TARGET "13.0"
  XCODE_ATTRIBUTE_DEBUG_INFORMATION_FORMAT "dwarf-with-dsym"
  XCODE_ATTRIBUTE_ALWAYS_SEARCH_USER_PATHS "NO"
)
